# cs107-FinalProject

./: .travis.yml  README.md  codecov.yml  dummy_test.py  setup.cfg  setup.py
.github/workflows/: .coveragerc  workflow.yml
BlueKumquatAutoDiff/tests/: test_autodiff.py  test_reverse.py  test_reverse_node.py  test_simpleautodiff.py
autodiff/: __init__.py  autodiff.py  demo.py
autodiff/tests/: __init__.py  test_autodiff.py  test_reverse.py  test_reverse_node.py  test_simpleautodiff.py
docs/: documentation.md  milestone1.md  milestone2.ipynb  milestone2.md  milestone2_progress.md
