[metadata]
name = autodiff-pkg-Blue-Kumquat
version = 0.0.1
author = Caitlin Lau, Jailyn Clark, Lu Yu, and Mason Burlage
author_email = luyu@g.harvard.edu, jailynclark@g.harvard.edu, luyu@g.harvard.edu, mburlage@college.harvard.edu
description = Automatic differentiation package for simple and vector functions. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-blue-kumquat
project_urls =
    Documentation = https://github.com/cs107-blue-kumquat/cs107-FinalProject/tree/main/docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = autodiff
packages = find:
python_requires = >=3.6

[options.packages.find]
where = autodiff